# Neural-Net-Constructor

./: .gitignore  CMakeLists.txt  README.md  main.cpp
benchmark/: CMakeLists.txt  NeuralNetConstructor-Copy1.ipynb  README.md  benchmark.cpp
benchmark/output/: conv2d.backward.json  conv2d.forward.json  conv2d_convolve.forward.json  pretty.json  result_forward.json
scripts/: cifar.cpp  prepare.sh  prepare_cifar.py
scripts/data/: empty.txt
src/: CMakeLists.txt
src/layers/: Activations.h  Conv2d.h  Dropout.cpp  Dropout.h  Flatten.h  Identity.cpp  Identity.h  Layer.cpp  Layer.h  Linear.cpp  Linear.h  MaxPool2d.h  Sequential.cpp  Sequential.h
src/optimizers/: Loss.cpp  Loss.h  Optimizer.h
src/utils/: Convolution.h  Convolution_old.h  DataLoader.cpp  DataLoader.h  Dataset.cpp  Dataset.h  FloatTensor.cpp  FloatTensor.h  Maxpooling.h  Parallel.cpp  Parallel.h  Parameter.cpp  Parameter.h  Tensor.cpp  Tensor.h
test/: CMakeLists.txt  conv_maxpool.cpp  data.csv  dropout.cpp  dump  imgs_labels.csv  layers.cpp  optimizers.cpp  test_utils.cpp  tests.cpp  tmp.cpp  utils.cpp
